src/test/ui/nll/relate_tys/hr-fn-aau-eq-abu.stderr
error: higher-ranked subtype error
  --> $DIR/hr-fn-aau-eq-abu.rs:33:53
   |
LL |     let a: Cell<for<'a, 'b> fn(&'a u32, &'b u32)> = make_cell_aa();
   |                                                     ^^^^^^^^^^^^^^

error: aborting due to previous error

